General improvements. Updated minimessage to 4.10.0, Compile time unmodifiable collections, sql preconditions. Started doing Home command, CarbonChat hook!