@@ -1,36 +1,41 @@
 package org.gepron1x.clans.plugin.util;
 
+import net.kyori.adventure.text.Component;
 import net.kyori.adventure.text.ComponentLike;
-import net.kyori.adventure.text.minimessage.Template;
+import net.kyori.adventure.text.minimessage.placeholder.Placeholder;
+import net.kyori.adventure.text.minimessage.placeholder.PlaceholderResolver;
 
-import java.util.Arrays;
 import java.util.Collection;
-import java.util.function.Supplier;
+import java.util.List;
 
 public interface TemplateHolder<T extends TemplateHolder<T>> { // i have no clue how to call this
 
 
-    T with(Template template);
+    T with(Placeholder<?> placeholder);
 
-    T with(Iterable<Template> templates);
+    T with(Iterable<? extends Placeholder<?>> placeholders);
 
-    T with(Collection<Template> templates);
+    T with(Collection<? extends Placeholder<?>> templates);
 
-    default T with(Template... templates) {
-        return with(Arrays.asList(templates));
+    T with(PlaceholderResolver placeholderResolver);
+
+    default T with(Placeholder<?>... templates) {
+        return with(List.of(templates));
     }
+
+
 
     default T with(String key, ComponentLike like) {
-        return with(Template.template(key, like));
+        return with(Placeholder.component(key, like));
     }
 
-    default T with(String key, Supplier<? extends ComponentLike> supplier) {
-        return with(Template.template(key, supplier));
-    }
 
+    default T withMiniMessage(String key, String value) {
+        return with(Placeholder.miniMessage(key, value));
+    }
 
     default T with(String key, String value) {
-        return with(Template.template(key, value));
+        return with(key, Component.text(value));
     }
 
     default T with(String key, CharSequence sequence) {
@@ -38,31 +43,31 @@ public interface TemplateHolder<T extends TemplateHolder<T>> { // i have no clue
     }
 
     default T with(String key, int value) {
-        return with(key, String.valueOf(value));
+        return with(key, Component.text(value));
     }
 
     default T with(String key, double value) {
-        return with(key, String.valueOf(value));
+        return with(key, Component.text(value));
     }
 
     default T with(String key, float value) {
-        return with(key, String.valueOf(value));
+        return with(key, Component.text(value));
     }
 
     default T with(String key, short value) {
-        return with(key, String.valueOf(value));
+        return with(key, Component.text(value));
     }
 
     default T with(String key, long value) {
-        return with(key, String.valueOf(value));
+        return with(key, Component.text(value));
     }
 
     default T with(String key, boolean value) {
-        return with(key, String.valueOf(value));
+        return with(key, Component.text(value));
     }
 
     default T with(String key, char value) {
-        return with(key, String.valueOf(value));
+        return with(key, Component.text(value));
     }
 
 }
